fix(views): don't use CKEditor
It's just not worth it. It crashes in some environments/devices
And doesn't mix well with other features.

--- a/app/views/articles_new.html
+++ b/app/views/articles_new.html
@@ -18,7 +18,7 @@
     </div>
     <div class="form-group" dir="rtl">
       <label for="articleBody">المحتوى</label>
-      <textarea class="form-control" id="articleBody" ng-model="article.body" required ckeditor></textarea>
+      <textarea class="form-control" id="articleBody" required ng-model="article.body" msd-elastic></textarea>
     </div>
     <button type="submit" class="btn btn-block btn-lg btn-success"
             ng-disabled="articleForm.$invalid">إضافة المقال</button>
