--- a/app/views/books.html
+++ b/app/views/books.html
@@ -17,11 +17,10 @@
              ng-model="book.title" ng-show="vm.isEditing(book.$id)">
     </header>
     <div class="panel-body">
-      <div dir="rtl" ng-bind-html="book.description" ng-show="vm.isVisitor()"></div>
-      <div ng-show="vm.isAdmin()">
-        <textarea class="form-control" dir="rtl" placeholder="الوصف"
-                  ng-model="book.description" contenteditable="true" ckeditor></textarea>
-      </div>
+      <pre dir="rtl" ng-bind="book.description" ng-hide="vm.isEditing(book.$id)"></pre>
+      <textarea class="form-control" dir="rtl" placeholder="الوصف"
+                ng-show="vm.isEditing(book.$id)"ng-model="book.description" msd-elastic>
+      </textarea>
     </div>
     <table class="table">
       <tbody>
