--- a/app/views/articles_new.html
+++ b/app/views/articles_new.html
@@ -17,10 +17,18 @@
       <input type="text" class="form-control" id="articleTitle" autofocus required ng-model="article.title">
     </div>
     <div class="form-group" dir="rtl">
+      <label for="articleDescription">الخلاصة</label>
+      <input type="text" class="form-control" id="articleDescription" ng-model="article.description">
+    </div>
+    <div class="form-group" dir="rtl">
+      <label for="articleImage">الصورة</label>
+      <input type="file" class="form-control" id="articleImage">
+    </div>
+    <div class="form-group" dir="rtl">
       <label for="articleBody">المحتوى</label>
       <textarea class="form-control" id="articleBody" required ng-model="article.body" msd-elastic></textarea>
     </div>
     <button type="submit" class="btn btn-block btn-lg btn-success"
-            ng-disabled="articleForm.$invalid">إضافة المقال</button>
+            ng-disabled="articleForm.$invalid || vm.uploading">إضافة المقال</button>
   </form>
 </section>
