fix(styles): make pre like p

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -6,3 +6,8 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
 body, pre {
   font-family: 'Droid Arabic Naskh'
 }
+
+pre {
+  background-color: #FFF;
+  border: 0px solid #FFF;
+}
