--- a/app/views/articles.html
+++ b/app/views/articles.html
@@ -11,18 +11,15 @@
 
 <section class="container">
   <article class="panel panel-default" ng-repeat="article in vm.articles">
-    <header class="panel-heading text-center" ng-show="article.image || article.description">
+    <header class="panel-heading text-center">
       <a dir="rtl" ng-href="#/article/{{article.$id}}" ng-bind="article.title"></a>
     </header>
-    <div class="panel-body text-center" ng-hide="article.image || article.description">
-      <a dir="rtl" ng-href="#/article/{{article.$id}}" ng-bind="article.title"></a>
-    </div>
-    <div class="panel-body text-center" ng-show="article.image || article.description">
+    <div class="panel-body text-center">
       <section class="thumbnail">
-        <a ng-href="#/article/{{article.$id}}" alt="{{article.image."><img ng-src="{{article.image.url}}"></a>
-        <div class="caption">
-          <p class="text-center" dir="rtl" ng-bind="article.description"></p>
-        </div>
+        <a ng-href="#/article/{{article.$id}}" alt="{{article.image.name}}" ng-show="article.image">
+          <img ng-src="{{article.image.url}}">
+        </a>
+        <div class="caption"><pre class="text-right" dir="rtl">{{ article.body | truncate }}</pre></div>
       </section>
     </div>
     <footer class="panel-footer text-center" ng-show="vm.isAdmin()">
