--- a/app/views/article.html
+++ b/app/views/article.html
@@ -15,13 +15,31 @@
   </ol>
 </nav>
 
+<section class="container">
+  <div class="text-center">
+    <div class="btn-group">
+      <button type="button" class="btn btn-default" ng-click="vm.resetFont()">
+        <span class="glyphicon glyphicon-text-size"></span>
+      </button>
+      <button type="button" class="btn btn-default" ng-click="vm.decreaseFont()">
+        <span class="glyphicon glyphicon-minus"></span>
+      </button>
+      <button type="button" class="btn btn-default" ng-click="vm.increaseFont()">
+        <span class="glyphicon glyphicon-plus"></span>
+      </button>
+    </div>
+  </div>
+</section>
+
+<hr>
+
 <article>
   <section class="container">
     <div class="thumbnail">
       <img ng-src="{{vm.article.image.url}}" alt="{{vm.articl.image.name}}"
            ng-hide="vm.isEditing()" ng-show="vm.article.image">
       <div class="caption">
-        <pre class="text-right" dir="rtl" ng-bind="vm.article.body" ng-hide="vm.isEditing()"></pre>
+        <pre class="text-right" dir="rtl" id="articleText" ng-bind="vm.article.body" ng-hide="vm.isEditing()"></pre>
         <div class="form-group" dir="rtl" ng-show="vm.isEditing()">
           <label class="sr-only" dir="rtl" for="articleBody">المحتوى</label>
           <textarea class="form-control" dir="rtl" id="articleBody" placeholder="المحتوى" required
