--- a/app/views/homepage.html
+++ b/app/views/homepage.html
@@ -2,3 +2,16 @@
   <h1>عبدالواحد الأنصاري</h1>
   <p><a class="btn btn-success btn-lg" href="#/about" role="button">من أنا</a></p>
 </div>
+
+<hr>
+
+<section class="container-fluid">
+  <div class="text-center">
+    <a class="twitter-timeline" href="https://twitter.com/abdulwahed1978" data-widget-id="640915658335744000">
+      تغريدات من عبدالواحد الأنصاري
+    </a>
+  </div>
+</section>
+<script>
+  !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");
+</script>
