feat(assets): include CKEditor only in about page

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -25,3 +25,9 @@
 <section class="container" ng-show="vm.isVisitor()">
   <div dir="rtl" ng-bind-html="vm.aboutHTML"></div>
 </section>
+
+<script src="//cdn.ckeditor.com/4.4.5.1/full-all/ckeditor.js"></script>
+<script>
+  CKEDITOR.config.defaultLanguage = 'ar';
+  CKEDITOR.config.language = 'ar';
+</script>
