chore(views): use a different word for 'book'

--- a/app/views/books.html
+++ b/app/views/books.html
@@ -1,11 +1,11 @@
 <header class="page-header">
-  <h1 class="text-center" dir="rtl">كتب</h1>
+  <h1 class="text-center" dir="rtl">إصدارات</h1>
 </header>
 
 <nav class="container" dir="rtl">
   <ol class="breadcrumb">
     <li><a href="#/">الصفحة الرئيسية</a></li>
-    <li class="active">كتب</li>
+    <li class="active">إصدارات</li>
   </ol>
 </nav>
 
@@ -74,5 +74,5 @@
 <hr ng-show="vm.isAdmin()">
 
 <footer class="container" ng-show="vm.isAdmin()">
-  <a href="#/books/new" class="btn btn-lg btn-block btn-success">إضافة كتاب</a>
+  <a href="#/books/new" class="btn btn-lg btn-block btn-success">إضافة إصدار</a>
 </footer>
