--- a/app/views/books_new.html
+++ b/app/views/books_new.html
@@ -1,12 +1,12 @@
 <header class="page-header">
-  <h1 class="text-center" dir="rtl">إضافة كتاب</h1>
+  <h1 class="text-center" dir="rtl">إضافة إصدار</h1>
 </header>
 
 <nav class="container" dir="rtl">
   <ol class="breadcrumb">
     <li><a href="#/">الصفحة الرئيسية</a></li>
-    <li><a href="#/books">كتب</a></li>
-    <li class="active">إضافة كتاب</li>
+    <li><a href="#/books">إصدارات</a></li>
+    <li class="active">إضافة إصدار</li>
   </ol>
 </nav>
 
@@ -32,6 +32,6 @@
       <label for="bookDescription">الوصف</label>
       <textarea class="form-control" id="bookDescription" ng-model="book.description" msd-elastic></textarea>
     </div>
-    <button type="submit" class="btn btn-block btn-lg btn-success" ng-disabled="bookForm.$invalid">إضافة الكتاب</button>
+    <button type="submit" class="btn btn-block btn-lg btn-success" ng-disabled="bookForm.$invalid">إضافة الإصدار</button>
   </form>
 </section>
