--- a/app/views/article.html
+++ b/app/views/article.html
@@ -49,7 +49,7 @@
       </div>
     </div>
   </section>
-  <footer class="text-center" ng-show="vm.isAdmin()">
+  <footer class="text-center" ng-show="mainCtrl.isAdmin()">
     <div class="btn-group" ng-hide="vm.isEditing()">
       <button type="button" class="btn btn-sm btn-danger" ng-click="vm.destroy()">حذف</button>
       <a ng-href="#/article/{{vm.article.$id}}/edit" class="btn btn-sm btn-primary">تعديل</a>
