--- a/app/views/articles.html
+++ b/app/views/articles.html
@@ -20,7 +20,7 @@
         <div class="caption"><pre class="text-right" dir="rtl">{{ article.body | truncate }}</pre></div>
       </section>
     </div>
-    <footer class="panel-footer text-center" ng-show="vm.isAdmin()">
+    <footer class="panel-footer text-center" ng-show="mainCtrl.isAdmin()">
       <div class="btn-group">
         <button type="button" class="btn btn-sm btn-danger" ng-click="vm.articles.$remove(article)">حذف</button>
         <a ng-href="#/article/{{article.$id}}/edit" class="btn btn-sm btn-primary">تعديل</a>
@@ -29,8 +29,8 @@
   </article>
 </section>
 
-<hr ng-show="vm.isAdmin()">
+<hr ng-show="mainCtrl.isAdmin()">
 
-<footer class="container" ng-show="vm.isAdmin()">
+<footer class="container" ng-show="mainCtrl.isAdmin()">
   <a href="#/articles/new" class="btn btn-success btn-lg btn-block">إضافة مقال</a>
 </footer>
