--- a/app/views/quotes.html
+++ b/app/views/quotes.html
@@ -17,7 +17,7 @@
                 ng-show="vm.isEditing(quote.$id)" ng-model="quote.text" msd-elastic>
       </textarea>
     </div>
-    <div class="panel-footer" ng-show="vm.isAdmin()">
+    <div class="panel-footer" ng-show="mainCtrl.isAdmin()">
       <div aria-label="إدارة مقتطف" class="btn-group" role="group" ng-show="vm.isEditing(quote.$id)">
         <button type="button" class="btn btn-sm btn-danger" ng-click="vm.quotes.$remove(quote)">حذف</button>
         <button type="button" class="btn btn-sm btn-primary" ng-click="vm.update(quote)">حفظ</button>
@@ -30,8 +30,8 @@
   </article>
 </section>
 
-<hr ng-show="vm.isAdmin()">
+<hr ng-show="mainCtrl.isAdmin()">
 
-<footer class="container" ng-show="vm.isAdmin()">
+<footer class="container" ng-show="mainCtrl.isAdmin()">
   <a href="#/quotes/new" class="btn btn-success btn-lg btn-block">إضافة مقتطف</a>
 </footer>
