feat(ui): change social buttons

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -11,10 +11,10 @@
 
 <section class="container text-center">
   <div class="btn-group">
-    <a class="btn btn-default" target="_blank" href="https://www.facebook.com/abdulwahed.alansary">
+    <a class="btn btn-primary" target="_blank" href="https://www.facebook.com/abdulwahed.alansary">
       <i class="fa fa-facebook-square fa-5x"></i>
     </a>
-    <a class="btn btn-default" target="_blank" href="https://twitter.com/abdulwahed1978">
+    <a class="btn btn-primary" target="_blank" href="https://twitter.com/abdulwahed1978">
       <i class="fa fa-twitter-square fa-5x"></i>
     </a>
   </div>
